Refactor ComponentService to use collect instead of toList for video item processing